<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_anasayfa"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_anasayfa" />

    <item
        android:id="@+id/navigation_bagislar"
        android:icon="@drawable/ic_view_list_black_24dp"
        android:title="@string/title_bagislar" />

    <item
        android:id="@+id/navigation_kurumlar"
        android:icon="@drawable/ic_work_black_24dp"
        android:title="@string/title_kurumlar" />
    <item
        android:id="@+id/navigation_profil"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_profil" />

</menu>
