<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BireyselKaydol">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textviewBireyselKaydolAd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textviewBireyselKaydolAd"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="#FF012E16" />

            <EditText
                android:id="@+id/edittextBireyselKaydolAd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textviewBireyselKaydolSoyad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textviewBireyselKaydolSoyad"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="#FF012E16" />

            <EditText
                android:id="@+id/edittextBireyselKaydolSoyad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textviewBireyselKaydolEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textviewBireyselKaydolEmail"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="#FF012E16" />

            <EditText
                android:id="@+id/edittextBireyselKaydolEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/textviewBireyselKaydolAdres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textviewBireyselKaydolAdres"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="#FF012E16" />

            <EditText
                android:id="@+id/edittextBireyselKaydolAdres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textviewBireyselKaydolTelefon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textviewBireyselKaydolTelefon"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="#FF012E16" />

            <EditText
                android:id="@+id/edittextBireyselKaydolTelefon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone" />

            <TextView
                android:id="@+id/textviewBireyselKaydolKullaniciadi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textviewBireyselKaydolKullaniciadi"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="#FF012E16" />

            <EditText
                android:id="@+id/edittextBireyselKaydolKullaniciadi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textviewBireyselKaydolSifre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textviewBireyselKaydolSifre"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="#FF012E16" />

            <EditText
                android:id="@+id/edittextBireyselKaydolSifre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />


            <TextView
                android:id="@+id/textviewBireyselKaydolSifreDogrula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textviewBireyselKaydolSifreDogrula"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="#FF012E16" />

            <EditText
                android:id="@+id/edittextBireyselKaydolSifreDogrula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />


            <TextView
                android:id="@+id/textviewBireyselKaydolSosyalmedya"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textviewBireyselKaydolSosyalmedya"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="#FF012E16" />

            <EditText
                android:id="@+id/edittextBireyselKaydolSosyalmedya"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textviewBireyselKaydolFotograf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textviewBireyselKaydolFotograf"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="#FF012E16" />

            <Button
                android:id="@+id/buttonBireyselKaydolFotograf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonBireyselKaydolFotograf"
                />

            <ImageView
                android:id="@+id/imageviewBireyselKaydolFotograf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:srcCompat="@tools:sample/avatars[2]" />

            <Button
                android:id="@+id/buttonBireyselKaydolKayitol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonBireyselKaydolKayitol" />
        </LinearLayout>

    </ScrollView>

</FrameLayout>