<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Giris">

    <TextView
        android:id="@+id/textviewGirisKullaniciadi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textviewGirisEmail"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="#FF012E16" />


    <EditText
        android:id="@+id/edittextGirisKullaniciadi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/texttiewGirisSifre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texttiewGirisSifre"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="#FF012E16"
        />

    <EditText
        android:id="@+id/edittextGirisSifre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonGirisGiris"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonGirisGiris"
        />

    <TextView
        android:id="@+id/textViewGirisSifremiUnuttum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/textViewSifremiUnuttum"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="#FF012E16"
        />

</LinearLayout>