<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".KurumsalKaydol">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textviewKurumsalKaydolKurumadi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textviewKurumsalKaydolKurumadi"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="#FF012E16"/>

            <EditText
                android:id="@+id/edittextKurumsalKaydolKurumadi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                />

            <TextView
                android:id="@+id/textviewKurumsalKaydolKurumno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textviewKurumsalKaydolKurumno"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="#FF012E16"/>

            <EditText
                android:id="@+id/edittextKurumsalKaydolKurumno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                />

            <TextView
                android:id="@+id/textviewKurumsalKaydolEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textviewKurumsalKaydolEmail"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="#FF012E16"
                />

            <EditText
                android:id="@+id/edittextKurumsalKaydolEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/textviewKurumsalKaydolAdres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textviewKurumsalKaydolAdres"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="#FF012E16"
                />

            <EditText
                android:id="@+id/edittextKurumsalKaydolAdres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textviewKurumsalKaydolTelefon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textviewKurumsalKaydolTelefon"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="#FF012E16"
                />

            <EditText
                android:id="@+id/edittextKurumsalKaydolTelefon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone" />

            <TextView
                android:id="@+id/textviewKurumsalKaydolSifre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textviewKurumsalKaydolSifre"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="#FF012E16"
                />

            <EditText
                android:id="@+id/edittextKurumsalKaydolSifre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/textviewKurumsalKaydolSifreDogrula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textviewKurumsalKaydolSifreDogrula"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="#FF012E16"
                />

            <EditText
                android:id="@+id/edittextKurumsalKaydolSifreDogrula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/textviewKurumsalKaydolSosyalmedya"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textviewKurumsalKaydolSosyalmedya"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="#FF012E16"
                />

            <EditText
                android:id="@+id/edittextKurumsalKaydolSosyalmedya"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="#FF012E16"
                />

            <Button
                android:id="@+id/buttonKurumsalKaydolFotograf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonKurumsalKaydolFotograf"
                />

            <TextView
                android:id="@+id/textviewKurumsalKaydolFotograf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textviewKurumsalKaydolFotograf"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="#FF012E16"
                />

            <ImageView
                android:id="@+id/imageviewKurumsalKaydolFotograf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:srcCompat="@tools:sample/avatars[2]" />

            <Button
                android:id="@+id/buttonKurumsalKaydolKayitol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonKurumsalKaydolKayitol"

                />

        </LinearLayout>
    </ScrollView>


</FrameLayout>